--- a/Shared/NavMenu.razor.css
+++ b/Shared/NavMenu.razor.css
@@ -5,6 +5,24 @@
 .top-row {
     height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
+    margin-left: -1rem;
+    margin-right: -1rem;
+    display: flex;
+    align-content: center;
+    width: 15rem;
+    margin-bottom: 1rem;
+    float: right;
+    transition: all 0.3s ease-in-out;
+}
+
+.top-row.collapse {
+    margin-right: 0;
+    margin-left: 0;
+    display: flex;
+    align-content: center;
+    float: right;
+    margin-bottom: 1rem;
+    transition: all 0.3s ease-in-out;
 }
 
 .navbar-brand {
@@ -13,19 +31,22 @@
 
 .oi {
     width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
+    font-size: 2rem;
+    right: 8px;
+    cursor: pointer;
+    display: flex;
+}
+
+nav {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
+    transition: all 0.3s ease-in-out;
 }
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
 
     .nav-item:last-of-type {
         padding-bottom: 1rem;
@@ -50,13 +71,64 @@
     color: white;
 }
 
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
+.hide {
+    display: none;
+}
 
+.sidebar {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    height: 100vh;
+    background-color: var(--sidebarColor);
+    width: 15rem;
+    transition: all 0.3s ease-in-out;
+    transition-property: width, padding;
+    overflow: hidden;
+    
+}
+
+.sidebar.collapse {
+    width: 3rem;
+    padding-left: 0;
+    padding-right: 0;
+    overflow: hidden;
+    
+}
+
+.center-horizontal {
+    display: flex;
+    justify-content: center;
+}
+
+.center-vertical {
+    display: flex;
+    align-items: center;
+}
+
+.menu-text {
+    font-size: 1rem;
+    margin: 0;
+    white-space: nowrap;
+}
+
+.active-nav {
+    background-color: var(--sidebarColor);
+    border-radius: 0px 2rem 2rem 0px;
+    width: 16.5rem;
+    height: 3rem;
+    position: absolute;
+    display: block;
+    transition: all 0.3s ease-in-out;
+    z-index: -1;
+}
+
+.active-nav.collapse {
+    width: 4.5rem;
+    transition: all 0.3s ease-in-out;
+}
+
+@media (min-width: 641px) {
     .collapse {
-        /* Never collapse the sidebar for wide screens */
         display: block;
     }
 }
