--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -8,8 +8,55 @@ main {
     flex: 1;
 }
 
+.dropdown-menu {
+    display: block;
+    margin-left: -8rem;
+    top: 3rem;
+    transform: scaleY(1);
+    transform-origin: top;
+    background-color: var(--toprowColor);
+    border: 1px solid #d6d5d5;
+    width: 10rem;
+    transition: transform 0.2s linear;
+}
+
+.dropdown-menu.collapse {
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.2s linear;
+}
+
+.user-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    width: 2rem;
+}
+
+.user-menu-list {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 1rem;
+}
+
+.user-icon {
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.user-icon:active {
+    margin-top: 1px;
+    font-size: 28px;
+}
+
+.content {
+    height: calc(100% - 3.5rem);
+}
+
 .top-row {
-    background-color: #f7f7f7;
+    background-color: var(--toprowColor);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
