--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,7 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 :root {
     --sidebarColor: #6495ed;
+    --toprowColor: #f7f7f7;
 }
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
