--- a/Shared/Components/ReplyCard.razor
+++ b/Shared/Components/ReplyCard.razor
@@ -1,5 +1,5 @@
 @namespace ExArbete.Shared.Components
-@using ExArbete.Data
+@using ExArbete.Models
 
 <div class="post-container">
     <div class="post-title" @onclick="ExpandPost">
