--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@using ExArbete.Data
+﻿@using ExArbete.Models
 @using Google.Cloud.Firestore
 @inject FirestoreDb firestoreDb
 @inject IJSRuntime JS
