--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,7 +2,11 @@
 @inject IJSRuntime JS
 @using Google.Cloud.Firestore
 @inject FirestoreDb firestoreDb
-@using ExArbete.Data
+@using ExArbete.Models
+@using ExArbete.Interfaces
+@using System.Security.Claims
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject IUserService userService
 
 <PageTitle>ExArbete</PageTitle>
 
@@ -14,13 +18,34 @@
         <div class="top-row px-4">
             
             <div class="user-menu">
-                <span class="bi bi-person-circle user-icon" @onclick=ToggleMenu>
+                <AuthorizeView>
+                    <Authorized>
+                            <div class="auth-row">
+                                <p class="name-text">@(userService.User.GoogleName ?? "")</p>
+                            <img class="profile-image" src="@userService.User.GoogleImage" @onclick=ToggleMenu referrerpolicy="no-referrer">
+                            </div>
+                        
+                    </Authorized>
+                    <NotAuthorized>
+                        <span class="bi bi-person-circle user-icon" @onclick=ToggleMenu>
                 </span>
+                    </NotAuthorized>
+                </AuthorizeView>
+                
                 <div id="dropdown" class="dropdown-menu @CssCollapse">
                     <ul class="user-menu-list">
-                        <li>hem</li>
-                        <li>logut</li>
-                        <li>hej</li>
+                        <AuthorizeView>
+                            <Authorized>
+                                <li>hem</li>
+                                <li>hej</li>
+                                <li><NavLink href="/Identity/Account/Logout">Log out</NavLink></li>
+                            </Authorized>
+                            <NotAuthorized>
+                                <li><NavLink href="/Identity/Account/Login">Log in</NavLink></li>
+                            </NotAuthorized>
+                        </AuthorizeView>
+                        
+                        
                     </ul>
                 </div>
             </div>
@@ -46,6 +71,20 @@
     {
         if (firstRender)
         {
+            if(userService.User.GoogleName == null)
+            {
+                AuthenticationState authenticationState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+                
+                if(authenticationState.User.Identity. IsAuthenticated)
+                {
+                    await userService.GetDataIfExistingUser(authenticationState.User.Claims.Where(c => c.Type == ClaimTypes.Email).First().Value, firestoreDb);
+                    foreach (Claim item in authenticationState.User.Claims)
+                    {
+                        Console.WriteLine(item.Type, item.Value);
+                    }
+                    
+                }
+            }
             categoryList = await GetCategories();
             categoryList.OrderBy(d => d.Name);
             await InvokeAsync(() => StateHasChanged());
