--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -10,7 +10,6 @@ main {
 
 .dropdown-menu {
     display: block;
-    margin-left: -8rem;
     top: 3rem;
     transform: scaleY(1);
     transform-origin: top;
@@ -30,15 +29,45 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     height: 2rem;
-    width: 2rem;
+    min-width: 10rem;
 }
 
 .user-menu-list {
     list-style-type: none;
     margin: 0;
     padding-left: 1rem;
+}
+
+.auth-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    float: left;
+}
+
+.name-text {
+    font-size: 14px;
+    margin: 0;
+}
+
+.profile-image {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    border: 1px solid rgba(73, 73, 73, 0.541);
+    cursor: pointer;
+    margin-left: 1rem;
+}
+
+.profile-image:active {
+    width: 28px;
+    height: 28px;
+    margin-top: 1px;
+    margin-right: 1px;
+    margin-left: calc(1rem + 1px);
 }
 
 .user-icon {
