--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -56,7 +56,7 @@ main {
 .profile-image {
     width: 30px;
     height: 30px;
-    border-radius: 15px;
+    border-radius: 50%;
     border: 1px solid rgba(73, 73, 73, 0.541);
     cursor: pointer;
     margin-left: 1rem;
@@ -81,7 +81,8 @@ main {
 }
 
 .content {
-    height: calc(100% - 3.5rem);
+    max-height: calc(100vh - 3.5rem);
+    overflow: auto;
 }
 
 .top-row {
@@ -103,7 +104,7 @@ main {
         text-overflow: ellipsis;
     }
 
-@media (max-width: 640.98px) {
+@media (max-width: 64.098px) {
     .top-row:not(.auth) {
         display: none;
     }
@@ -117,7 +118,7 @@ main {
     }
 }
 
-@media (min-width: 641px) {
+@media (min-width: 64.1px) {
     .page {
         flex-direction: row;
     }
